--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- navigation/top bar-->
 <div class = tipBar>
-<h2>Peeople notes</h2>
+<h2>openCourse</h2>
 </div>
 
 
@@ -82,7 +82,7 @@
     <div class="scroll-item2">
         <h2>MTS 209</h2>
         <div style ="display:flex;"> <h3>9 contributors</h3>
-            <h3 style="position:absolute; right:10px;">60/150</h3>
+            <h3>60/150</h3>
         </div>
 
          <!-- Progress bar container -->
@@ -96,7 +96,7 @@
      <div class="scroll-item2">
         <h2>MTS 209</h2>
         <div style ="display:flex;"> <h3>9 contributors</h3>
-            <h3 style="position:absolute; right:10px;">60/150</h3>
+            <h3>60/150</h3>
         </div>
 
          <!-- Progress bar container -->
@@ -110,7 +110,7 @@
      <div class="scroll-item2">
         <h2>MTS 209</h2>
         <div style ="display:flex;"> <h3>9 contributors</h3>
-            <h3 style="position:absolute; right:10px;">60/150</h3>
+            <h3>60/150</h3>
         </div>
 
          <!-- Progress bar container -->
@@ -124,7 +124,7 @@
      <div class="scroll-item2">
         <h2>MTS 209</h2>
         <div style ="display:flex;"> <h3>9 contributors</h3>
-            <h3 style="position:absolute; right:10px;">60/150</h3>
+            <h3>60/150</h3>
         </div>
 
          <!-- Progress bar container -->
@@ -138,7 +138,7 @@
      <div class="scroll-item2">
         <h2>MTS 209</h2>
         <div style ="display:flex;"> <h3>9 contributors</h3>
-            <h3 style="position:absolute; right:10px;">60/150</h3>
+            <h3>60/150</h3>
         </div>
 
          <!-- Progress bar container -->
@@ -152,7 +152,7 @@
      <div class="scroll-item2">
         <h2>MTS 209</h2>
         <div style ="display:flex;"> <h3>9 contributors</h3>
-            <h3 style="position:absolute; right:10px;">60/150</h3>
+            <h3>60/150</h3>
         </div>
 
          <!-- Progress bar container -->
@@ -167,7 +167,7 @@
      <div class="scroll-item2">
         <h2>MTS 209</h2>
         <div style ="display:flex;"> <h3>9 contributors</h3>
-            <h3 style="position:absolute; right:10px;">60/150</h3>
+            <h3>60/150</h3>
         </div>
 
          <!-- Progress bar container -->
