--- a/leetspace.html
+++ b/leetspace.html
@@ -7,12 +7,10 @@
   <link rel="stylesheet" href="./peopleStyle.css" />
 </head>
 
-<body>
+<body><center>
 <div class = tipBar>
 <h4>Peeople notes</h4>
 </div>
-
-
-</body>
+</center>
 </body>  
 </html>
