--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>People notes</title>
   <meta name="viewport" content="width=device-width" ,initial-scale=1.0" />
-  <link rel="stylesheet" href="./peopleStyle.css" />
+  <link rel="stylesheet" href="./pages/style/index.css">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
@@ -12,9 +12,12 @@
 </head>
 
 <body>
+
+    
     <!-- navigation/top bar-->
 <div class = tipBar>
-<h2>openCourse</h2>
+<h2 >leetNote</h2>
+<h2 class="user" style ="color:rgba(9, 9, 9, 0.404);">Tobi.A</h2>
 </div>
 
 
@@ -182,6 +185,6 @@
 
 
  <!-- Include the app.js file -->
-<script src="app.js"></script>    
+<script src="./index.js"></script>    
 </body>  
 </html>
