--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- navigation/top bar-->
 <div class = tipBar>
 <h2 >leetNote</h2>
-<h2 class="user" style ="color:rgba(9, 9, 9, 0.404);">Tobi.A</h2>
+<h2 class="user" style ="color:rgba(9, 9, 9, 0.404);">User</h2>
 </div>
 
 
