--- a/pages/leetspace.html
+++ b/pages/leetspace.html
@@ -9,12 +9,10 @@
 
 <body>
     <!-- navigation/top bar-->
-    <div class = tipBar>
-      <h2>leetSpace</h2>
-        <span class="material-symbols-outlined">
-            Google
-            </span>
-          </div>
+     <div class = tipBar>
+        <h2 >leetClass</h2>
+        <h2 class="user" style ="color:rgba(9, 9, 9, 0.404);">User</h2>
+        </div>
 
           
           <div class="chat-container">
