--- a/pages/notes.html
+++ b/pages/notes.html
@@ -16,7 +16,7 @@
     <!-- navigation/top bar-->
     <div class = tipBar>
       <h2 >leetNote</h2>
-      <h2 class="user" style ="color:rgba(9, 9, 9, 0.404);">Tobi.A</h2>
+      <h2 class="user" style ="color:rgba(9, 9, 9, 0.404);">User</h2>
       </div>
 
 
@@ -29,7 +29,7 @@
 
 <div class = "notefab">
   <span class="material-symbols-outlined">
-    priority_high
+    quiz
     </span>
 </div>
   
