--- a/pages/leetspace.html
+++ b/pages/leetspace.html
@@ -4,6 +4,8 @@
 <head>
   <title>People notes</title>
   <meta name="viewport" content="width=device-width" ,initial-scale=1.0" />
+
+  <link rel="stylesheet" href="./style/global.css" />
   <link rel="stylesheet" href="./style/leetSpace.css" />
 </head>
 
@@ -11,7 +13,7 @@
     <!-- navigation/top bar-->
      <div class = tipBar>
         <h2 >leetClass</h2>
-        <h2 class="user" style ="color:rgba(9, 9, 9, 0.404);">User</h2>
+        <img class = "user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/google.png?alt=media&token=92b45bd7-7b36-45cf-97b4-756b53889a10">
         </div>
 
           
@@ -21,8 +23,7 @@
              <div class = "member-holder"> </div>
              
                 </div>
-            <div class="chat-input-container">
-              <button id="leave-button">leave ✌</button>
+            <div class="chat-input-container"> 
                 <input type="text" id="chat-input" placeholder="type your question">
                 <button id="chat-send-button">Ask 👋</button>
             </div>
