--- a/pages/notes.html
+++ b/pages/notes.html
@@ -4,6 +4,7 @@
 <head>
   <title>People notes</title>
   <meta name="viewport" content="width=device-width" ,initial-scale=1.0" />
+  <link rel="stylesheet" href="./style/global.css" />
   <link rel="stylesheet" href="./style/notes.css" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -16,7 +17,7 @@
     <!-- navigation/top bar-->
     <div class = tipBar>
       <h2 >leetNote</h2>
-      <h2 class="user" style ="color:rgba(9, 9, 9, 0.404);">User</h2>
+      <img class = "user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/google.png?alt=media&token=92b45bd7-7b36-45cf-97b4-756b53889a10">
       </div>
 
 
@@ -26,14 +27,6 @@
   <div class="progress-filler" style="width: 50%;"></div>
 
 
-
-<div class = "notefab">
-  <span class="material-symbols-outlined">
-    quiz
-    </span>
-</div>
-  
-     
 </div>
 
 
@@ -53,6 +46,14 @@
 
 
         <div class = "player"></div>
+
+
+
+        <div class = "notefab">
+          <span class="material-symbols-outlined">
+            quiz
+            </span>
+        </div>
      </div>
  <!-- Include the app.js file -->
 <script src="./js/notes.js"></script>
