--- a/pages/leetspace.html
+++ b/pages/leetspace.html
@@ -19,7 +19,31 @@
           
           <div class="chat-container">
             <div class="chat-messages">
-             <div class="player"> </div>
+
+
+
+
+
+
+
+
+
+              <div class="player">
+                <iframe src="https://player.vimeo.com/video/165749734?h=c347651918" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+              </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
              <div class = "member-holder"> </div>
              
                 </div>
