--- a/pages/notes.html
+++ b/pages/notes.html
@@ -33,7 +33,11 @@
 <!-- peopleCourses-->
 <div class="peopleCourses">
 
-     <div class = "player"></div>
+  <div class="player">
+    <iframe src="https://player.vimeo.com/video/165749734?h=c347651918" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  
       
        <div class="note-tile">
        <p>Mesh analysis is a technique used in electrical circuit analysis to determine the electric current in each branch of a network.......</p>
@@ -45,7 +49,9 @@
         </div>
 
 
-        <div class = "player"></div>
+        <div class="player">
+          <iframe src="https://player.vimeo.com/video/165749734?h=c347651918" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+        </div>
 
 
 
