--- a/pages/leetspace.html
+++ b/pages/leetspace.html
@@ -54,5 +54,6 @@
         </div>
     
         <script src="./js/leetSpace.js"></script>
+        <script src="./js/global.js"></script>
 </body>  
 </html>
