--- a/pages/notes.html
+++ b/pages/notes.html
@@ -63,6 +63,7 @@
      </div>
  <!-- Include the app.js file -->
 <script src="./js/notes.js"></script>
+<script src="./js/global.js"></script>
    
 </body>  
 </html>
