--- a/pages/test.html
+++ b/pages/test.html
@@ -88,5 +88,7 @@
 </div>
  <!-- Include the app.js file -->
 <script src="./js/test.js"></script>
+<script src="./js/global.js"></script>
+
 </body>  
 </html>
