--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
 </div>
      </div>
  <!-- Include the app.js file -->
-<script src="./index.js"></script>    
+<script src="./index.js"></script>  
+<script src="./js/global.js"></script>
+  
 </body>  
 </html>
