--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>People notes</title>
   <meta name="viewport" content="width=device-width" ,initial-scale=1.0" />
+  <meta name="theme-color" content="#ecefc2"> <!-- Set your desired color here -->
+  
 
   <link rel="stylesheet" href="./pages/style/global.css">
   <link rel="stylesheet" href="./pages/style/index.css">
@@ -190,6 +192,6 @@
  <!-- Include the app.js file -->
 <script src="./index.js"></script>  
 <script src="./js/global.js"></script>
-  
+
 </body>  
 </html>
