--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>People notes</title>
-  <meta name="viewport" content="width=device-width" ,initial-scale=1.0" />
-  <meta name="theme-color" content="#ecefc2"> <!-- Set your desired color here -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#ecefc2"> <!-- Set your desired color here -->
   
 
   <link rel="stylesheet" href="./pages/style/global.css">
