--- a/pages/test.html
+++ b/pages/test.html
@@ -3,7 +3,9 @@
 
 <head>
   <title>People notes</title>
-  <meta name="viewport" content="width=device-width" ,initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="theme-color" content="#ecefc2"> <!-- Set your desired color here -->
+
   <link rel="stylesheet" href="./style/global.css" />
   <link rel="stylesheet" href="./style/test.css" />
 
