--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   
 
-  <script src="./js/global.js"></script>
+
 
 </head>
 
@@ -194,8 +194,7 @@
 </div>
      </div>
  <!-- Include the app.js file -->
-<script src="./index.js"></script>  
-
-
+<script type="module" src="./index.js"></script>  
+<script src="./js/global.js"></script>
 </body>  
 </html>
