--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- navigation/top bar-->
 <div class = tipBar>
 <h2 >leetNote</h2>
-<img class="user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/google.png?alt=media&token=92b45bd7-7b36-45cf-97b4-756b53889a10" onclick="signInWithGoogle()" alt="Sign in with Google">
+<img class="user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/google.png?alt=media&token=92b45bd7-7b36-45cf-97b4-756b53889a10" alt="Sign in with Google">
 
 </div>
 
