--- a/index.html
+++ b/index.html
@@ -53,16 +53,9 @@
     https://leetnote-7cfce-default-rtdb.firebaseio.com/courses.json-->
 
     <div class="scroll-item2">
-        <h2>MTS 209</h2>
-        <div style ="display:flex;"> <h3>9 contributors</h3>
-            <h3>60/150</h3>
-        </div>
+      <!--i was here-->
 
-         <!-- Progress bar container -->
-  <div class="progress-container">
-    <!-- Progress bar filler -->
-    <div class="progress-filler" style="width: 50%;"></div>
-  </div>
+         
 
      </div>
 
