--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html>
 
 <head>
@@ -52,7 +52,7 @@
     <!--sources
     https://leetnote-7cfce-default-rtdb.firebaseio.com/courses.json-->
 
-    <div class="scroll-item2">
+    
       <!--i was here-->
 
          
