--- a/index.html
+++ b/index.html
@@ -34,15 +34,7 @@
 <div  class = peopleSpaces>
  <div class="scroll-container">
               
-                <div class="scroll-item">
-                    <div class = "status">
-                     Live
-                    </div>
-                    <div class="status2">
-                        <h1>MTS 201</h1>
-                        <h4>6:00 -6:30</h4>
-                    </div>
-                </div>
+        <!--I was here once again-->
             
 
 </div>    
