--- a/pages/leetspace.html
+++ b/pages/leetspace.html
@@ -16,7 +16,7 @@
     <!-- navigation/top bar-->
      <div class = tipBar>
         <h2 >leetClass</h2>
-        <img class = "user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/google.png?alt=media&token=92b45bd7-7b36-45cf-97b4-756b53889a10">
+        <img class = "user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700386669083.png?alt=media&token=e304ed50-c64f-4fbc-bdb2-ee49b9f1e709">
         </div>
 
           
