--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 
      </div>
 
-
+     <div class = "fab">
+      <span class="material-symbols-outlined">
+        search
+        </span>
+    </div>
  <!-- Include the app.js file -->
 <script type="module" src="./index.js"></script>  
 <script src="./js/global.js"></script>
