--- a/pages/notes.html
+++ b/pages/notes.html
@@ -9,63 +9,46 @@
   <link rel="stylesheet" href="./style/global.css" />
   <link rel="stylesheet" href="./style/notes.css" />
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-  
+
 </head>
 
 <body>
-  
-    <!-- navigation/top bar-->
-    <div class = tipBar>
-      <h2 >leetNote</h2>
-      <img class = "user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700386669083.png?alt=media&token=e304ed50-c64f-4fbc-bdb2-ee49b9f1e709">
-      </div>
 
-
- <!-- Progress bar container -->
- <div class="progress-container" style="margin-left:10px; position: fixed; top:70px;z-index: 2px;">
-  <!-- Progress bar filler -->
-  <div class="progress-filler" style="width: 50%;"></div>
-
-
-</div>
-
-
-<!-- peopleCourses-->
-<div class="peopleCourses">
-
-  <div class="player">
-    <iframe src="https://player.vimeo.com/video/165749734?h=c347651918" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+  <!-- navigation/top bar-->
+  <div class=tipBar>
+    <h2>leetNote</h2>
+    <img class="user"
+      src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700386669083.png?alt=media&token=e304ed50-c64f-4fbc-bdb2-ee49b9f1e709">
   </div>
 
-  
-      
-       <div class="note-tile">
-       <p>Mesh analysis is a technique used in electrical circuit analysis to determine the electric current in each branch of a network.......</p>
-       </div>
 
-        <div class="note-tile">
-        <p>Mesh analysis is a technique used in electrical circuit analysis to determine the electric current in each branch of a network.......</p>
-        <input class="submit-button" type="file" id="imageInput" accept="image/*" style="display: block;">
-        </div>
+  <!-- Progress bar container -->
+  <div class="progress-container" style="margin-left:10px; position: fixed; top:70px;z-index: 2px;">
+    <!-- Progress bar filler -->
+    <div class="progress-filler" style="width: 50%;"></div>
 
 
-        <div class="player">
-          <iframe src="https://player.vimeo.com/video/165749734?h=c347651918" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
-        </div>
+  </div>
 
 
+  <!-- peopleCourses-->
+  <div class="peopleCourses">
 
-        <div class = "notefab">
-          <span class="material-symbols-outlined">
-            quiz
-            </span>
-        </div>
-     </div>
- <!-- Include the app.js file -->
-<script src="./js/notes.js"></script>
-<script src="./js/global.js"></script>
-   
-</body>  
+
+  </div>
+  <div class="notefab">
+    <span class="material-symbols-outlined">
+      quiz
+    </span>
+  </div>
+  </div>
+  <!-- Include the app.js file -->
+  <script src="./js/notes.js"></script>
+  <script src="./js/global.js"></script>
+
+</body>
+
 </html>
