--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
      </div>
 
      <div class = "fab">
-      <span class="material-symbols-outlined">
+      <span class="material-symbols-outlined" style="color:#fff;">
         search
         </span>
     </div>
