--- a/pages/test.html
+++ b/pages/test.html
@@ -73,7 +73,7 @@
             </div>
 
             <div class = "testfab">
-              <span class="material-symbols-outlined">
+              <span class="material-symbols-outlined" style="color:#fff;">
                 add
                 </span>
             </div>         
