--- a/pages/notes.html
+++ b/pages/notes.html
@@ -34,7 +34,7 @@
 
   </div>
   <div class="notefab">
-    <span class="material-symbols-outlined">
+    <span class="material-symbols-outlined"style="color:#fff;">
       quiz
     </span>
   </div>
