--- a/pages/leetspace.html
+++ b/pages/leetspace.html
@@ -35,7 +35,7 @@
                 </div>
             <div class="chat-input-container"> 
                 <input type="text" id="chat-input" placeholder="type your question">
-                <button id="chat-send-button">Ask 👋</button>
+                <button id="chat-send-button">Commit</button>
             </div>
         </div>
     
