--- a/pages/notes.html
+++ b/pages/notes.html
@@ -4,7 +4,7 @@
 <head>
   <title>People notes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="theme-color" content="#ecefc2"> <!-- Set your desired color here -->
+  <meta name="theme-color" content="#1c2128"> <!-- Set your desired color here -->
 
   <link rel="stylesheet" href="./style/global.css" />
   <link rel="stylesheet" href="./style/notes.css" />
