--- a/pages/test.html
+++ b/pages/test.html
@@ -19,7 +19,7 @@
     <!-- navigation/top bar-->
     <div class = tipBar>
       <h2 >leetNote</h2>
-      <img class = "user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700386669083.png?alt=media&token=e304ed50-c64f-4fbc-bdb2-ee49b9f1e709">
+      <img class="user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700792226453.png?alt=media&token=a57fcc0b-0b25-4992-9f48-764705f3dfcb" alt="Sign in with Google">
       </div>
       
       
