--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
  <!-- Include the app.js file -->
 <script type="module" src="./index.js"></script>  
-<script src="./js/global.js"></script>
+<script src="  "></script>
 
 </body>  
 </html>
