--- a/pages/test.html
+++ b/pages/test.html
@@ -41,6 +41,6 @@
 
  <!-- Include the app.js file -->
 <script src="./js/test.js"></script>
-<script src="./js/global.js"></script>
+<script  type="module" src="./pages/js/global.js"></script>
 </body>  
 </html>
