--- a/pages/notes.html
+++ b/pages/notes.html
@@ -39,7 +39,7 @@
   </div>
   <!-- Include the app.js file -->
   <script src="./js/notes.js"></script>
-  <script src="./js/global.js"></script>
+  <script  type="module" src="./pages/js/global.js"></script>
 </body>
 
 </html>
