--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>People notes</title>
+  <title>leetNote</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#1c2128"> <!-- Set your desired color here -->
   
@@ -27,6 +27,11 @@
 
 </div>
 
+
+<!--Landing page -->
+<div class=" landing">
+
+</div>
 
 
     <!-- popele spaces-->
