--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 </div>
 
+<div class="email" style="width:0px; height: 0px;"></div>
 
     <!-- popele spaces-->
 <div  class = peopleSpaces>
@@ -63,6 +64,8 @@
  <!-- Include the app.js file -->
 <script type="module" src="./index.js"></script>  
 <script  type="module" src="./pages/js/global.js"></script>
+
+
 
 </body>  
 </html>
