--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
 
 </div>
 
-<div class="email" style="width:0px; height: 0px;"></div>
+<div class="email">deyplay</div>
+
+<script>
+  const emailElement = document.getElementsByClassName('email')[0];
+  var email = emailElement.innerText;
+  console.log(email);
+</script>
 
     <!-- popele spaces-->
 <div  class = peopleSpaces>
