--- a/index.html
+++ b/index.html
@@ -33,14 +33,7 @@
 
 </div>
 
-<div class="email">deyplay</div>
-
-<script>
-  const emailElement = document.getElementsByClassName('email')[0];
-  var email = emailElement.innerText;
-  console.log(email);
-</script>
-
+<div class="email">letGooo</div>
     <!-- popele spaces-->
 <div  class = peopleSpaces>
  <div class="scroll-container">
