--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 </div>
 
-<div class="email"></div>
+<div class="email" style="color:#fff"></div>
     <!-- popele spaces-->
 <div  class = peopleSpaces>
  <div class="scroll-container">
