--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   // Add click event listener to the "Get Started" button
   document.getElementById('get-started-btn').addEventListener('click', function() {
     // Simulate click on the user div element
-    document.getElementById('user').click();
+    document.getElementsByClassName('user')[0].click();
   });
 </script>
         </section>
