--- a/index.html
+++ b/index.html
@@ -41,14 +41,6 @@
   <!--Landing page -->
   <div class=" landing">
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #ffffff;
-        color: #333;
-      }
-
       header {
         padding-top: 25px;
         background-color: #1c212800;
@@ -169,7 +161,7 @@
       fab.style.display = 'none';
     } else {
       const landing = document.querySelector('.landing');
-      peopleCoursesElement.style.display = 'none';
+      landing.style.display = 'none';
     }
   </script>
   <!-- Include the app.js file -->
