--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         display: block;
         margin: 20px auto;
         padding: 10px 20px;
-        background-color: #30a143;
+        background-color: (0, 132, 255);
         color: #fff;
         text-align: center;
         text-decoration: none;
