--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         display: block;
         margin: 20px auto;
         padding: 10px 20px;
-        background-color: (0, 132, 255);
+        background-color: rgb(55, 138, 255);
         color: #fff;
         text-align: center;
         text-decoration: none;
@@ -77,7 +77,7 @@
       }
 
       footer {
-        background-color: #cdcdcd;
+        background-color: #efefef;
         color: #000000;
         text-align: center;
         padding: 10px;
