--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         display: block;
         margin: 20px auto;
         padding: 10px 20px;
-        background-color: rgb(55, 138, 255);
-        color: #fff;
+        background-color: rgb(255, 186, 59);
+        color: #000000;
         text-align: center;
         text-decoration: none;
         border-radius: 50px;
