--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>leetNote</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="theme-color" content="#1c2128"> <!-- Set your desired color here -->
+  <meta name="theme-color" content="#FFBA3B"> <!-- Set your desired color here -->
   <link rel="stylesheet" href="./pages/style/global.css">
   <link rel="stylesheet" href="./pages/style/index.css">
   <link rel="stylesheet"
@@ -66,7 +66,7 @@
         display: block;
         margin: 20px auto;
         padding: 10px 20px;
-        background-color: rgb(255, 186, 59);
+        background-color: rgb(255, 166, 0);
         color: #000000;
         text-align: center;
         text-decoration: none;
