--- a/pages/test.html
+++ b/pages/test.html
@@ -40,7 +40,7 @@
             </div>         
 
  <!-- Include the app.js file -->
-<script src="./js/test.js"></script>
+<script  type="module"  src="./js/test.js"></script>
 <script  type="module" src="./pages/js/global.js"></script>
 </body>  
 </html>
