--- a/pages/leetspace.html
+++ b/pages/leetspace.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     
-        <script src="./js/leetSpace.js"></script>
-        <script src="./js/global.js"></script>  
+        <script  type="module" src="./js/leetSpace.js"></script>
+        <script  type="module" src="./js/global.js"></script>  
 </body>  
 </html>
