--- a/pages/notes.html
+++ b/pages/notes.html
@@ -38,7 +38,7 @@
   </div>
   </div>
   <!-- Include the app.js file -->
-  <script src="./js/notes.js"></script>
+  <script  type="module" src="./js/notes.js"></script>
   <script  type="module" src="./pages/js/global.js"></script>
 </body>
 
