--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,1 +1,52 @@
-This is profile
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>People notes</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="theme-color" content="#FFBA3B"> <!-- Set your desired color here -->
+
+  <link rel="stylesheet" href="./style/global.css" />
+  <link rel="stylesheet" href="./style/notes.css" />
+
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+</head>
+
+<body>
+
+  <!-- navigation/top bar-->
+  <div class=tipBar>
+    <h2 >leetNote</h2>
+  </div>
+
+
+ 
+
+
+  <!-- peopleCourses-->
+  <div class="profile" style="text-align: center; margin-top:50px;">
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxskBELKkcItHXQFVTYI5p3_413uobvl2BHJLEM7PNg4cag9-l6n2mydDwws1CjV0ZTjw&usqp=CAU" style="width:25%">
+<h1>Email address</h1>
+<h1>Electrical And Eletronic engineering</h1>
+<h1>200lv</h1>
+
+<p style="font-weight: bold; font-size:40px; margin:0px; margin-top: 20px;"> 2168</p>
+<p style="font-weight: bold; font-size:30px; margin:0px; color:#c3c3c3;"> Questions solved</p>
+
+  </div>
+  <div class="notefab">
+    <span class="material-symbols-outlined"style="color:#fff;">
+      home
+    </span>
+
+  </div>
+  </div>
+  <!-- Include the app.js file -->
+  <script  type="module" src="./js/profle.js"></script>
+  <script  type="module" src="./pages/js/global.js"></script>
+</body>
+
+</html>
