--- a/pages/profile.html
+++ b/pages/profile.html
@@ -33,8 +33,10 @@
 <h1>Electrical And Eletronic engineering</h1>
 <h1>200lv</h1>
 
-<p style="font-weight: bold; font-size:40px; margin:0px; margin-top: 20px;"> 2168</p>
-<p style="font-weight: bold; font-size:30px; margin:0px; color:#c3c3c3;"> Questions solved</p>
+<p style="font-weight: bold; font-size:40px; margin:0px; margin-top: 20px;"> 2168 solved</p>
+
+
+<button>Subscribe</button>
 
   </div>
   <div class="notefab">
