--- a/pages/profile.html
+++ b/pages/profile.html
@@ -28,15 +28,32 @@
   <!-- peopleCourses-->
   <div class="profile" style="text-align: center; margin-top:50px;">
 
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxskBELKkcItHXQFVTYI5p3_413uobvl2BHJLEM7PNg4cag9-l6n2mydDwws1CjV0ZTjw&usqp=CAU" style="width:25%">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxskBELKkcItHXQFVTYI5p3_413uobvl2BHJLEM7PNg4cag9-l6n2mydDwws1CjV0ZTjw&usqp=CAU" style="width:25%; margin: 20px;">
 <h1>Email address</h1>
 <h1>Electrical And Eletronic engineering</h1>
 <h1>200lv</h1>
 
-<p style="font-weight: bold; font-size:40px; margin:0px; margin-top: 20px;"> 2168 solved</p>
+<p style="font-weight: bold; font-size:25px; margin:0px; margin-top: 20px;"> 450 ✔</p>
 
 
-<button>Subscribe</button>
+
+<style>
+     .subscribe-btn {
+        display: block;
+        margin: 20px;
+        padding: 10px 20px;
+        background-color: rgb(255, 166, 0);
+        color: #000000;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 50px;
+        padding-top: 15px;
+        height: 20px;
+
+      }
+
+</style>
+<div class="subscribe-btn">Subscribe</div>
 
   </div>
   <div class="notefab">
