--- a/pages/profile.html
+++ b/pages/profile.html
@@ -27,7 +27,7 @@
 
   <!-- peopleCourses-->
   <div class="profile" style="text-align: center; margin-top:50px;">
-<!--img class="user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700792226453.png?alt=media&token=a57fcc0b-0b25-4992-9f48-764705f3dfcb" alt="Sign in with Google"-->
+<img class="user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700792226453.png?alt=media&token=a57fcc0b-0b25-4992-9f48-764705f3dfcb" alt="Sign in with Google">
 
 <h1>Email address</h1>
 <h1>Electrical And Eletronic engineering</h1>
