--- a/pages/notes.html
+++ b/pages/notes.html
@@ -40,6 +40,7 @@
   <!-- Include the app.js file -->
   <script  type="module" src="./js/notes.js"></script>
   <script  type="module" src="./pages/js/global.js"></script>
+<script  type="module" src="./pages/js/global2.js"></script>
 </body>
 
 </html>
