--- a/pages/test.html
+++ b/pages/test.html
@@ -44,5 +44,7 @@
  <!-- Include the app.js file -->
 <script  type="module"  src="./js/test.js"></script>
 <script  type="module" src="./pages/js/global.js"></script>
+<script  type="module" src="./pages/js/global2.js"></script>
+
 </body>  
 </html>
