--- a/pages/leetspace.html
+++ b/pages/leetspace.html
@@ -40,6 +40,8 @@
         </div>
     
         <script  type="module" src="./js/leetSpace.js"></script>
-        <script  type="module" src="./js/global.js"></script>  
+        <script  type="module" src="./js/global.js"></script>
+<script  type="module" src="./pages/js/global2.js"></script>
+
 </body>  
 </html>
