--- a/pages/profile.html
+++ b/pages/profile.html
@@ -54,6 +54,17 @@
 
 </style>
 <div class="subscribe-btn">Subscribe</div>
+<script>
+  // Get the subscribe button element
+  var subscribeBtn = document.getElementById('subscribeBtn');
+
+  // Add a click event listener to the subscribe button
+  subscribeBtn.addEventListener('click', function() {
+      // Redirect to the specified link
+      window.location.href = "https://paystack.com/pay/how5u2810o";
+  });
+</script>
+
 
   </div>
   <div class="notefab">
