--- a/pages/leetspace.html
+++ b/pages/leetspace.html
@@ -41,7 +41,7 @@
     
         <script  type="module" src="./js/leetSpace.js"></script>
         <script  type="module" src="./js/global.js"></script>
-<script  type="module" src="./pages/js/global2.js"></script>
+        <script  type="module" src="./js/global2.js"></script>
 
 </body>  
 </html>
