--- a/pages/notes.html
+++ b/pages/notes.html
@@ -39,8 +39,8 @@
   </div>
   <!-- Include the app.js file -->
   <script  type="module" src="./js/notes.js"></script>
-  <script  type="module" src="./pages/js/global.js"></script>
-<script  type="module" src="./pages/js/global2.js"></script>
+  <script  type="module" src="./js/global.js"></script>
+<script  type="module" src="./js/global2.js"></script>
 </body>
 
 </html>
