--- a/pages/profile.html
+++ b/pages/profile.html
@@ -53,7 +53,7 @@
       }
 
 </style>
-<div class="subscribe-btn">Subscribe</div>
+<div id="subscribeBtn"class="subscribe-btn">Subscribe</div>
 <script>
   // Get the subscribe button element
   var subscribeBtn = document.getElementById('subscribeBtn');
