--- a/pages/profile.html
+++ b/pages/profile.html
@@ -27,23 +27,23 @@
 
   <!-- peopleCourses-->
   <div class="profile" style="text-align: center; margin-top:50px;">
-<img class="user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700792226453.png?alt=media&token=a57fcc0b-0b25-4992-9f48-764705f3dfcb" alt="Sign in with Google">
+<img class="user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700792226453.png?alt=media&token=a57fcc0b-0b25-4992-9f48-764705f3dfcb" alt="Sign in with Google" width="200px" height="200px">
 
 <h1>Email address</h1>
 <h1>Electrical And Eletronic engineering</h1>
 <h1>200lv</h1>
 
-<p style="font-weight: bold; font-size:25px; margin:0px; margin-top: 20px;"> 450 ✔</p>
 
 
 
 <style>
      .subscribe-btn {
         display: block;
+        margin-top: 50px;
         margin: 20px;
         padding: 10px 20px;
-        background-color: rgb(255, 166, 0);
-        color: #000000;
+        background-color: #3BB75E;
+        color: #ffffff;
         text-align: center;
         text-decoration: none;
         border-radius: 50px;
