--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 
 <head>
   <title>leetNote</title>
+    <!-- Favicon -->
+    <link rel="icon" href="./pages/leetnote.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./pages/leetnote.jpg" type="image/x-icon">
+
+
+
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="theme-color" content="#FFBA3B"> <!-- Set your desired color here -->
   <link rel="stylesheet" href="./pages/style/global.css">
