--- a/pages/test.html
+++ b/pages/test.html
@@ -3,6 +3,14 @@
 
 <head>
   <title>People notes</title>
+ <!-- Favicon -->
+ <link rel="icon" href="./leetnote.jpg" type="image/x-icon">
+ <link rel="shortcut icon" href="./leetnote.jpg" type="image/x-icon">
+
+
+
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="theme-color" content="#FFBA3B"> <!-- Set your desired color here -->
 
