--- a/pages/profile.html
+++ b/pages/profile.html
@@ -39,7 +39,7 @@
 <h1>.'..</h1>
 <style>
      .subscribe-btn {
-        display: null;
+        display:none;
         margin-top: 50px;
         margin: 20px;
         padding: 10px 20px;
