--- a/pages/profile.html
+++ b/pages/profile.html
@@ -53,6 +53,16 @@
 
       }
 
+      footer {
+        background-color: #efefef;
+        color: #000000;
+        text-align: center;
+        padding: 10px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+
 </style>
 <div id="subscribeBtn"class="subscribe-btn">Subscribe</div>
 <script>
@@ -68,12 +78,22 @@
 
 
   </div>
-  <div class="notefab">
-    <span class="material-symbols-outlined"style="color:#fff;">
-      home
-    </span>
-
+ 
   </div>
+
+
+  <footer>
+    &copy; 2023 leetNote. All rights reserved.
+  </footer>
+
+
+  <div class="notefab">
+    <a href="https://wa.me/+2348133801134" style="color: #fff; text-decoration: none;">
+      <span class="material-symbols-outlined">
+        chat
+      </span>
+    </a>
+
   </div>
   <!-- Include the app.js file -->
   <script  type="module" src="./js/profle.js"></script>
