--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <body>
 
       <section  class=" landing">
-        
+        <h1 style="font-size: 70px; width:40%;"> Exam Cheats</h1>
 
 
 
