--- a/pages/profile.html
+++ b/pages/profile.html
@@ -50,7 +50,9 @@
         border-radius: 50px;
         padding-top: 15px;
         height: 20px;
-
+        width: 80%;
+        position: absolute;
+        bottom:50px;
       }
 
       footer {
