--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
       <section  class=" landing">
         <h1 style="font-size: 70px; width:40%;"> Exam Cheats</h1>
+        <h1 style="width:90%;">we will set you up for A in a semester course in just 6hrs </h1>
 
 
 
