--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
         padding-top: 15px;
         height: 20px;
         width: 80%;
-        position: absolute;
-        bottom:50px;
+     
       }
 
       footer {
@@ -100,9 +99,13 @@
     <body>
 
       <section  class=" landing">
-        <h1 style="font-size: 70px; width:40%;"> Exam Cheats</h1>
-        <h1 style="width:90%;">we will set you up for A in a semester course in just 6hrs </h1>
+        <h1 style="font-size: 60px; width:80%; margin-bottom:25px">A semester per night</h1>
+        <h1 style="width:90%;">We'll help you achieve an 'A' in a semester course in just 6 hours through video tutorials, 150 questions, and a Q&A chat. </h1>
 
+
+
+
+        
 
 
 
