--- a/index.html
+++ b/index.html
@@ -107,9 +107,12 @@
 
       <h1 style="font-weight:bold; margin-bottom: 20px;">What you are getting </h1>
     
-      <h1  style="margin-bottom:5px;"> Get an B after Stabbing classes</h1>
-      <h1  style="margin-bottom:5px;">Get the actual notes in your pockect after failing to snap notes </h1>
-      <h1  style="margin-bottom:5px;"> all the leaked pdfs as question and answer in one place</h1>
+      <h1  style="margin-bottom:5px;">- Get an B after Stabbing classes</h1>
+      <h1  style="margin-bottom:5px;">- Get the actual notes in your pockect after failing to snap notes </h1>
+      <h1  style="margin-bottom:5px;">-All the leaked pdfs as question and answer in one place</h1>
+      <h1  style="margin-bottom:5px;">-Live classes 5am-7am</h1>
+
+
 
 
 
