--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
     <body>
 
       <section  class=" landing">
-        <h1 style="font-size: 60px; width:80%; margin-bottom:25px">A semester per night</h1>
-        <h1 style="width:90%;">We'll help you achieve an 'A' in a semester course in just 6 hours through video tutorials, 150 questions, and a Q&A chat. </h1>
+        <h1 style="font-size: 50px; width:80%; margin-bottom:25px">A semester per night</h1>
+        <h1 style="width:90%;">We'll help you achieve an 'A' in a semester course in just 6 hours of study through video tutorials, 150 questions, and a Q&A chat. </h1>
 
         <div id="get-started-btn">Get Started</div>
 
       <h1 style="font-weight:bold; margin-bottom: 20px;">What you are getting </h1>
     
-      <h1  style="margin-bottom:5px;">- Get an B after Stabbing classes</h1>
+      <h1  style="margin-bottom:5px;">- Get a B after Stabbing classes</h1>
       <h1  style="margin-bottom:5px;">- Get the actual notes in your pockect after failing to snap notes </h1>
       <h1  style="margin-bottom:5px;">-All the leaked pdfs as question and answer in one place</h1>
       <h1  style="margin-bottom:5px;">-Live classes 5am-7am</h1>
