--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class=tipBar>
     <h2>4,252 Users</h2>
     <img class="user"
-      src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700792226453.png?alt=media&token=a57fcc0b-0b25-4992-9f48-764705f3dfcb"
+      src="./pages/pfp.png"
       alt="Sign in with Google">
   </div>
   <!-- popele spaces-->
