--- a/index.html
+++ b/index.html
@@ -6,23 +6,29 @@
     <!-- Favicon -->
     <link rel="icon" href="./pages/leetnote.jpg" type="image/x-icon">
     <link rel="shortcut icon" href="./pages/leetnote.jpg" type="image/x-icon">
-
-
-
-
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="theme-color" content="#FFBA3B"> <!-- Set your desired color here -->
   <link rel="stylesheet" href="./pages/style/global.css">
   <link rel="stylesheet" href="./pages/style/index.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
   <!-- navigation/top bar-->
   <div class=tipBar>
-    <h2>4,252 Users</h2>
+
+
+
+
+    
+    <h2 style="font-family: 'VT323', monospace; font-weight: 200; ">leetNote</h2>
     <img class="user"
       src="./pages/pfp.png"
       alt="Sign in with Google">
