--- a/pages/profile.html
+++ b/pages/profile.html
@@ -100,6 +100,7 @@
   <!-- Include the app.js file -->
   <script  type="module" src="./js/profle.js"></script>
   <script  type="module" src="./pages/js/global.js"></script>
+  <script type="module" src="./js/user.js"></scripttype></script>
 </body>
 
 </html>
