--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
 
       <h1 style="font-weight:bold; margin-bottom: 20px;">What you are getting </h1>
     
-      <h1  style="margin-bottom:5px;">- Get at least a 60 B after Stabbing classes</h1>
-      <h1  style="margin-bottom:5px;">- Get the actual notes in your pockect after failing to snap notes </h1>
-      <h1  style="margin-bottom:5px;">-All the leaked pdfs as question and answer in one place</h1>
-      <h1  style="margin-bottom:5px;">-Live classes 5am-7am</h1>
+      <h1  style="margin-bottom:10px;font-size: medium;">Get at least 70 A after Stabbing classes</h1>
+      <h1  style="margin-bottom:10px;font-size: medium;"">Get Over the guilt of not taking notes by buying acsess to a digitalzed version on leetNote  </h1>
+      <h1  style="margin-bottom:10px;font-size: medium;"">All the leaked pdfs as question and answer in one place</h1>
+      <h1  style="margin-bottom:10px;font-size: medium;"">Live classes 5am-7am and 9pm - 11pm</h1>
 
 
       <center><div id="get-started-btn2">Study smart</div>
