--- a/pages/profile.html
+++ b/pages/profile.html
@@ -33,7 +33,7 @@
 
   <!-- peopleCourses-->
   <div class="profile" style="text-align: center; margin-top:50px;">
-<img id="userImage"class="user" src="https://firebasestorage.googleapis.com/v0/b/leetnote-7cfce.appspot.com/o/1700792226453.png?alt=media&token=a57fcc0b-0b25-4992-9f48-764705f3dfcb" alt="Sign in with Google" width="200px" height="200px">
+<img id="userImage"class="user" src="./pfp.png" alt="Sign in with Google" width="200px" height="200px">
 
 <h1 id="emailAddress">Email address</h1>
 <!--Start of drop down-->
@@ -85,44 +85,6 @@
 </div>
 </div>
 <!--end of drop down-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
