--- a/pages/profile.html
+++ b/pages/profile.html
@@ -79,7 +79,7 @@
 <body>
 
 <div class="dropdown" id="dropdown">
-<div id="selected-item">EEE 200lv</div>
+<div id="selected-item">Department</div>
 <div class="dropdown-content" id="dropdown-content">
   <!-- Dropdown content will be dynamically loaded here -->
 </div>
@@ -150,7 +150,6 @@
   </div>
   <!-- Include the app.js file -->
   <script  type="module" src="./js/profle.js"></script>
-  <script  type="module" src="./pages/js/global.js"></script>
   <script type="module" src="./js/user.js"></scripttype></script>
 </body>
 
