--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
     <body>
 
       <section  class=" landing">
-        <h1 style="font-size: 60px; width:80%; margin-bottom:25px">Night school</h1>
+        <h1 style="font-size: 60px; width:80%; margin-bottom:25px">A semsester per night</h1>
         <h1 style="width:90%;">We'll help Cover a semester in two nights so you can get an A. </h1>
 
-        <div id="get-started-btn">Get St2arted</div>
+        <div id="get-started-btn">Get Started</div>
 
       <h1 style="font-weight:bold; margin-bottom: 20px;">What you are getting </h1>
       <h1  style="margin-bottom:10px;font-size: medium;"">25 paractics questions with solutions and 25min Live chat classe</h1>
