--- a/index.html
+++ b/index.html
@@ -135,19 +135,21 @@
     <body>
 
       <section  class=" landing">
-        <h1 style="font-size: 60px; width:80%; margin-bottom:25px">A semsester per night</h1>
+        <h1 style="font-size: 50px; width:80%; margin-bottom:25px">A semsester per night</h1>
         <h1 style="width:90%;">We'll help Cover a semester in two nights so you can get an A. </h1>
 
         <div id="get-started-btn">Get Started</div>
 
       <h1 style="font-weight:bold; margin-bottom: 20px;">What you are getting </h1>
-      <h1  style="margin-bottom:10px;font-size: medium;"">25 paractics questions with solutions and 25min Live chat classe</h1>
 
 
-      <h1  style="margin-bottom:10px;font-size: medium;">Get at least 70 A after Stabbing classes</h1>
-      <h1  style="margin-bottom:10px;font-size: medium;"">A new note in your pocket with the same Content as that of the best student in your department  </h1>
+      <h1  style="margin-bottom:10px;font-size: small;"">25 paractics questions with solutions and 25min Live chat classe</h1>
+
+
+      <h1  style="margin-bottom:10px;font-size: small;">Get at least 70 A after Stabbing classes</h1>
+      <h1  style="margin-bottom:10px;font-size: small;"">A new note in your pocket with the same Content as that of the best student in your department  </h1>
       
-      <h1  style="margin-bottom:10px;font-size: medium;"">An after exam party December 19 </h1>
+      <h1  style="margin-bottom:10px;font-size: small;"">An after exam party December 19 </h1>
 
 
       <center><div id="get-started-btn2">Study smart</div>
