--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 
       <center><div id="get-started-btn2">Study smart</div>
-      <h1  style="margin-bottom:100px;"> You can also try study smart for half the feature 4 times the price </h1></center>
+      <h1  style="margin-bottom:100px;font-size: small;color:#767676"> You can also try study smart for half the feature 4 times the price </h1></center>
 
 
 
