--- a/index.html
+++ b/index.html
@@ -135,8 +135,10 @@
     <body>
 
       <section  class=" landing">
-        <h1 style="font-size: 50px; width:80%; margin-bottom:25px">A semsester per night</h1>
-        <h1 style="width:90%;">We'll help Cover a semester in two nights so you can get an A. </h1>
+        <h1 style="font-size: 50px; width:80%; margin-bottom:25px">A semsester per night
+        </h1>
+
+        <h1 style="width:90%; font-size: medium;">We'll help Cover a semester in two nights so you can get an A. </h1>
 
         <div id="get-started-btn">Get Started</div>
 
