--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
     
-    <h2 style="font-family: 'VT323', monospace; font-weight: 200; ">leetNote</h2>
+    <h2 style="font-family: 'VT323', monospace; font-weight: 200; font-size: 35px;">leetNote</h2>
     <img class="user"
       src="./pages/pfp.png"
       alt="Sign in with Google">
@@ -135,7 +135,7 @@
     <body>
 
       <section  class=" landing">
-        <h1 style="font-size: 50px; width:80%; margin-bottom:25px">A semsester per night
+        <h1 style="font-size: 40px; width:80%; margin-bottom:25px">A semsester per night
         </h1>
 
         <h1 style="width:90%; font-size: medium;">We'll help Cover a semester in two nights so you can get an A. </h1>
