--- a/pages/test.html
+++ b/pages/test.html
@@ -45,7 +45,7 @@
 
             <div class = "testfab">
               <span class="material-symbols-outlined" style="color:#fff;">
-                add
+                calculate
                 </span>
             </div>         
 
