--- a/index.html
+++ b/index.html
@@ -23,13 +23,28 @@
 </head>
 
 <body>
+  <div class=peopleSpaces>
+    <div class="scroll-container">
+      <!--I was here once again-->
+    </div>
+  </div>
+  <!-- peopleCourses-->
+  <div class="peopleCourses">
+    <!--i was here-->
+  </div>
+  <div class="fab">
+    <span class="material-symbols-outlined" style="color:#fff;">
+      search
+    </span>
+  </div>
+
   <main>
     <div class="hero-container">
       <nav>
         <div class="logo-container">
           <img src="./assets/Leetnote-logo.png" alt="Leetnote logo">
         </div>
-        <div class="login-btn">
+        <div class="user login-btn">
           <p>Login</p>
           <img src="./assets/ic_round-login.svg" alt="Login icon">
         </div>
@@ -39,7 +54,7 @@
           <h1>‘A’ semester per night.</h1>
           <h3>We'll help cover a semester in two nights so you can get an A.</h3>
         </div>
-        <button>
+        <button class="get-started-btn">
           <div class="inner-row">
             <h4>Get Started</h4>
             <img src="./assets/triple-arrows.svg" alt="Login icon">
