--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ setTimeout(animateOpacity2, 750);
 
 
   <!-- Include the app.js file -->
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./pages/js/index.js"></script>
   <script type="module" src="./pages/js/global.js"></script>
 </body>
 
